# saddle-character-controller

./: Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: 8NtTaJFy.js  Dbdz2tj9.js  JJZc4Fit.js  LDWQFLB2.js  TCOtpsrC.js
_app/immutable/entry/: app.BsLqItBb.js  start.Nqy2ccGr.js
_app/immutable/nodes/: 0.BvTLtKvB.js  1.CQsy8rES.js  2.DhjGtT3S.js  3.CPvxb5AN.js  4.C3ezzcHA.js
demo/advanced_movement/: index.html
demo/basic/: index.html
demo/lab/: index.html
demo/moving_platforms/: index.html
demo/slopes_and_stairs/: index.html
demo/stress_many_controllers/: index.html
demo/third_person/: index.html
demo/traversal/: index.html
demo/water/: index.html
demos/advanced_movement/: index.html
demos/basic/: index.html
demos/lab/: index.html
demos/moving_platforms/: index.html
demos/slopes_and_stairs/: index.html
demos/stress_many_controllers/: index.html
demos/third_person/: index.html
demos/traversal/: index.html
demos/water/: index.html
docs/: architecture.md  configuration.md  debugging.md  movement-model.md  performance.md
docs/architecture/: __data.json  index.html
docs/configuration/: __data.json  index.html
docs/debugging/: __data.json  index.html
docs/movement-model/: __data.json  index.html
docs/performance/: __data.json  index.html
examples/: Cargo.toml
examples/advanced_movement/: Cargo.toml
examples/advanced_movement/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs
examples/lab/src/scenarios/: mod.rs
examples/moving_platforms/: Cargo.toml
examples/moving_platforms/src/: main.rs
examples/slopes_and_stairs/: Cargo.toml
examples/slopes_and_stairs/src/: main.rs
examples/stress_many_controllers/: Cargo.toml
examples/stress_many_controllers/src/: main.rs
examples/third_person/: Cargo.toml
examples/third_person/src/: main.rs
examples/traversal/: Cargo.toml
examples/traversal/src/: main.rs
examples/water/: Cargo.toml
examples/water/src/: main.rs
src/: components.rs  components_tests.rs  helpers.rs  helpers_tests.rs  input.rs  intent.rs  lib.rs  messages.rs  plugin_tests.rs  state.rs  surfaces.rs
src/abilities/: dash.rs  flying.rs  mantle.rs  mod.rs  swimming.rs  wall_kick.rs
src/adapters/: enhanced_input.rs  mod.rs
src/convenience/: environment.rs  environment_tests.rs  mod.rs  presets.rs
src/systems/: activation.rs  environment.rs  environment_tests.rs  finalize.rs  mod.rs  movement.rs  prepare.rs  presentation.rs
