[workspace]
members = [
    "common",
    "basic",
    "slopes_and_stairs",
    "moving_platforms",
    "advanced_movement",
    "traversal",
    "water",
    "third_person",
    "stress_many_controllers",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
avian3d = "0.6"
bevy_flair = "0.7"
bevy_enhanced_input = "0.24"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-character-controller = { path = ".." }
saddle-camera-fps-camera = { git = "https://github.com/julien-blanchon/saddle-camera-fps-camera" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
