[package]
name = "saddle-character-controller-example-common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
bevy_enhanced_input = { workspace = true }
saddle-character-controller = { workspace = true }

[lints]
workspace = true
