[package]
name = "saddle-character-controller-example-common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
avian3d = { workspace = true }
bevy_flair = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-character-controller = { workspace = true }
saddle-camera-fps-camera = { workspace = true }
saddle-pane = { workspace = true }

[lints]
workspace = true
