[package]
name = "saddle-character-controller-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
avian3d = { workspace = true }
bevy = { version = "0.18", features = ["serialize"] }
bevy_flair = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-character-controller = { workspace = true }
saddle-character-state-machine = { git = "https://github.com/julien-blanchon/saddle-character-state-machine" }
saddle-animation-ik = { git = "https://github.com/julien-blanchon/saddle-animation-ik" }
saddle-pane = { workspace = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }

[lints]
workspace = true
