[package]
name = "saddle-character-controller-example-moving-platforms"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
bevy_enhanced_input = { workspace = true }
saddle-character-controller = { workspace = true }
saddle-character-controller-example-common = { path = "../common" }
saddle-pane = { workspace = true }

[lints]
workspace = true
