[package]
name = "saddle-character-controller-example-water"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-character-controller = { workspace = true }
saddle-character-controller-example-common = { path = "../common" }

[lints]
workspace = true
